--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -12,7 +12,12 @@
   }
 }
 
-// Fluid type
+// ==========================================================================
+//   $Fluid type
+// ==========================================================================
+// Learn more: https://madebymike.com.au/writing/fluid-type-calc-examples/
+// Source: http://www.sassmeister.com/gist/7f22e44ace49b5124eec
+//
 // Usage example:
 // @include fluid-type(font-size, 30rem, 66.25rem, $ms0, $ms1);
 
