--- a/scss/globals/_globals.scss
+++ b/scss/globals/_globals.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  color: $color-text;
+  color: $text-color;
   font-feature-settings: "kern" 1, "dlig" 1; // Turns on kerning and ligatures
   -moz-font-feature-settings: "kern" 1, "dlig" 1;
 }
